Add working signing in and remove some files